/*
 * $Id: ChangeLog,v 1.1459 2003/09/13 04:06:37 paultucker Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-09-13 12:00 UTC-0300 Luiz Rafael Culik<culikr@uol.com.br>
  * contrib/hbzlib/makefile.bc
    ! fixed some errors
  * contrib/hbzlib/zipmemfile.cpp
    ! fix some comp erros under bcc32

2003-09-13 00:05 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * contrib/hbzlib/include/stdafx.h
    * remove trace calls

2003-09-12 23:30 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * include/hbcompress.h
    * updated to reflect current hbzlib

2003-09-12 16:45 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * contrib/hbzlib
    * zip.c
    * Makefile
    * zipcomp.cpp
    * ziparchive.cpp
    * zipmemfile.cpp
    * zipnew.cpp
    * makefile.vc
    * makefile.bc
    * make_b32.bat
    * make_vc.bat
    ! changes all around for msvc support and to correct certain error
    ! conditions

   *   *   * output file is now hbzip.lib

  - contrib/hbzlib/zlib
    * the essential contents of this directory are now in source/rtl/hbcompress.c
    * the licence file will be updated.
  + contrib/hbzlib/include
    ! *.h has been moved into this directory
  * makallvc.bat
    + hbzlib
  + tests\testzip.prg
    * cheesy Zip archive tester.
    * this is stil WIP.
  * bin/bld.bat
    + add samples.lib

2003-09-12 08:28 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * xharbour/source/vm/proc.c
    * Fixed 2 possible GPF traps.

2003-09-12 04:26 UTC+2000 Giancarlo Niccolai <gian@niccolai.ws>
  * source/vm/memvars.c
    ! fixed windows compilation

2003-09-11 04:10 UTC+2000 Giancarlo Niccolai <gian@niccolai.ws>
  * source/vm/hvm.c
  * source/vm/memvars.c
    ! fixed memvar access under MT.

  * tests/mtstress.prg
    + added tests for memvars

2003-09-11 18:15 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/clipsamp/gauge.c