@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1459 2003/09/13 04:06:37 paultucker Exp $
+ * $Id: ChangeLog,v 1.1460 2003/09/13 15:21:33 lculik Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,13 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-09-13 12:13 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/vm/proc.c
+    ! Fixed GPF trap.
+
+  * source/vm/arrays.c
+    * Minor optimization.
 
 2003-09-13 12:00 UTC-0300 Luiz Rafael Culik<culikr@uol.com.br>
   * contrib/hbzlib/makefile.bc
